--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
     <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="assets/css/style.css" rel="stylesheet">
-    <!-- You can change the theme colors from here -->
-    <link href="assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
+    <!-- You can change the theme colors from here, DUM: cambiar el tema desde configuración -->
+    <link id="tema" href="assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
