--- a/src/index.html
+++ b/src/index.html
@@ -43,8 +43,8 @@
     <!--stickey kit -->
     <script src="assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
     <script src="assets/plugins/sparkline/jquery.sparkline.min.js"></script>
-    <!--Custom JavaScript -->
-    <script src="assets/js/custom.min.js"></script>
+    <!--Custom JavaScript DUM: se modifica el archivo para que el sistema pueda cargar el menu dinamico -->
+    <script src="assets/js/custom.js"></script>
     <!-- ============================================================== -->
     <!-- Style switcher -->
     <!-- ============================================================== -->
