se finaliza logueo x google

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <!-- You can change the theme colors from here, DUM: cambiar el tema desde configuración -->
     <link id="tema" id="theme" rel="stylesheet">
+    <!-- Google Autentificación -->
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <meta name="google-signin-client_id" content="261803787485-9d77fs26rb1j6s2nd800t92bqm2t73mj.apps.googleusercontent.com">
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
